fix z-index issue

--- a/scripts/dropdown/dropdown.css
+++ b/scripts/dropdown/dropdown.css
@@ -40,7 +40,7 @@
   position: absolute;
   background-color: var(--non-spectrum-grey-100);
   min-width: 160px;
-  z-index: 2;
+  z-index: 20;
   width: 100%;
   box-sizing: border-box;
   padding: 12px;
